# mjlog2json

./: .gitignore  Cargo.toml  README.md
data/: 2019021004gm-00a9-0000-e2f6516d.json  2019021004gm-00a9-0000-e2f6516d.xml  2019080322gm-00a9-0000-81e85e04.json  2019080322gm-00a9-0000-81e85e04.xml  2019081518gm-00a9-0000-cce9d00c.json  2019081518gm-00a9-0000-cce9d00c.xml  2019103023gm-00a9-0000-f90e0fe9.json  2019103023gm-00a9-0000-f90e0fe9.xml  2019123123gm-00a9-0000-f4386d0e.json  2019123123gm-00a9-0000-f4386d0e.xml  2023053016gm-0029-0000-e54b3b98.json
mjlog/: Cargo.toml  README.md
mjlog/src/: lib.rs  model.rs  parser.rs
mjlog2json/: Cargo.toml
mjlog2json-checker/: Cargo.toml  README.md
mjlog2json-checker/src/: checker.rs  main.rs
mjlog2json-core/: Cargo.toml  README.md
mjlog2json-core/src/: conv.rs
mjlog2json/src/: converter.rs  main.rs
scripts/: download-json.sh  download-old-html-gz.sh  download-xml.sh
tenhou-json/: Cargo.toml  README.md
tenhou-json/src/: calc.rs  exporter.rs  lib.rs  model.rs  parser.rs  score.rs
