[package]
name = "mjlog"
version = "0.1.2"
edition = "2021"
description = "mjlog XML parser"
repository = "https://github.com/tsubakisakura/mjlog2json/"
documentation = "https://docs.rs/mjlog"
license = "Apache-2.0 OR MIT"

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.19"
percent-encoding = "2.3.1"
quick-xml = "0.37"
thiserror = "2.0.11"
