[package]
name = "mjlog2json"
version = "0.1.1"
edition = "2021"
description = "Convert mjlog-XML to tenhou-JSON"
repository = "https://github.com/tsubakisakura/mjlog2json/"
documentation = "https://docs.rs/mjlog2json"
license = "Apache-2.0 OR MIT"

[dependencies]
mjlog = { version = "0.1.1", path = "../mjlog" }
tenhou-json = { version = "0.1.1", path = "../tenhou-json" }
mjlog2json-core = { version = "0.1.1", path = "../mjlog2json-core" }
glob = "0.3.2"
thiserror = "2.0.12"
async-std = { version = "1.13.0", features = ["attributes"] }
futures = "0.3.31"
serde_json = "1.0.140"
argh = "0.1.13"
